--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="Style.css">
 </head>
 <!--THIS IS MY MAIN PAGE-->
+ <main>
 <h1> The News Times</h1>
 <br>
 <div class="grid">
@@ -47,3 +48,5 @@
     Opinion <br> Sports <br> </h5>
 </div>
 </div>
+ </main>
+</html>
